ADD some photos for test

--- a/Project/css/project-style.css
+++ b/Project/css/project-style.css
@@ -130,3 +130,11 @@
     background-color: #eee; /* Add a hover effect to all links, except for headers */
 }
 
+/* images */
+
+.image-display {
+    margin: 10px;
+    width: auto;
+    height: 20%;
+}
+
