--- a/Project/css/project-style.css
+++ b/Project/css/project-style.css
@@ -150,14 +150,14 @@
 
 .modal
 {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
+    display: none;
+    position: fixed;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.5);
     z-index: 10000000;
 }
 
@@ -173,22 +173,69 @@
 
     padding-right: 20px;
     border: 1px solid #888;
-    width: 50%; /* Could be more or less, depending on screen size */
+    width: 50%;
     height: auto;
 
     display: flex;
     flex-direction: row;
     transition: transform 0.5s;
-
 }
+
+.divider-vertical
+{
+    position: relative;
+    margin-left: 5px;
+    width: 5px;
+    height: 100%;
+    overflow: hidden;
+    background-color: #e5e5e5;
+}
+
+/* Details container */
 
 #modal-image-details-content #details-container
 {
     display: flex;
     flex-direction: column;
+    height: auto;
+    width: 100%;
+    margin-left: 25px;
+    margin-top: 15px;
 
 }
 
+#modal-image-details-content #details-container p
+{
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 3px;
+}
+
+
+/* Description container */
+
+#modal-image-details-content #details-container #desc-container
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#modal-image-details-content #details-container #desc-container #desc
+{
+    margin: auto;
+}
+
+/* Price container */
+#modal-image-details-content #details-container #price-container
+{
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+}
+
+
+/*Image container */
 #modal-image-details-content #image-container
 {
     left:0;
@@ -203,9 +250,10 @@
 
 #add-cart-submit
 {
-    width: 15%;
-    height: 33px;
-
+    width: 30%;
+    margin-top:100%;
+    height: 30px;
+    margin: auto;
     padding: auto;
     border: 1px solid #00c7fc;
     border-radius: 3px;
@@ -217,5 +265,7 @@
     background-color: #FFFFFF;
     color: #212529;
 }
+
+
 
 
