--- a/Project/css/form-page.css
+++ b/Project/css/form-page.css
@@ -1,12 +1,13 @@
 .form-container {
-    max-width: 330px;
+    max-width: 400px;
+    min-width: 350px;
     padding: 15px;
 
     position: absolute;
     top: 50%;  left: 50%;
     transform: translate(-50%, -50%);
 
-    box-shadow: 0px 0px 5px 5px #040505;
+    box-shadow: 0 0 5px 5px #040505;
 }
 .form-container * {
     margin-bottom: 10px;
@@ -18,5 +19,5 @@
 }
 
 .checkbox {
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
