--- a/Project/css/project-style.css
+++ b/Project/css/project-style.css
@@ -184,6 +184,54 @@ header h2
     background-color: #eee;
 }
 
+
+
+/* CartPanel */
+#cart-container
+{
+
+    display:flex;
+    flex-direction: column;
+
+}
+
+.cart-element
+{
+    margin: auto;
+    display:flex;
+    flex-direction: row;
+}
+
+.details-container
+{
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.remove-cart-span
+{
+    font-size: 25px;
+    margin-left: 50px;
+    color: red;
+}
+
+.remove-cart-span:hover
+{
+    cursor: pointer;
+    text-decoration: underline;
+}
+.divider-horizontal
+{
+    width: 50%;
+    margin: auto;
+    height: 1px;
+    background-color: #6c757d;
+    border-radius: 5px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
 /* footer */
 
 footer
