WIP on image display so add .basic-image-display

--- a/Project/css/project-style.css
+++ b/Project/css/project-style.css
@@ -55,6 +55,14 @@ header h2
 
 /* images */
 
+.basic-image-display
+{
+    width: auto;
+    height: 150px;
+
+    margin: 10px;
+}
+
 .image-display
 {
     width: auto;
