--- a/Project/css/project-style.css
+++ b/Project/css/project-style.css
@@ -2,6 +2,11 @@
     display: flex;
     flex-direction: row;
 }
+.vertical-layout
+{
+    display: flex;
+    flex-direction: column;
+}
 .center-horizontally {
     display: flex;
     margin: auto;
@@ -152,139 +157,75 @@
     margin: 10px;
 }
 
-/* Details Image Modal */
+
+
+/* modal */
 
 .modal
 {
     display: none;
+    width: 100%;
+    height: 100%;
+
     position: fixed;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0,0,0);
+
     background-color: rgba(0,0,0,0.5);
     z-index: 10000000;
 }
 
-#modal-image-details-content
+.modal-content
 {
-    background-color: #fefefe;
-
-    /*Align vertically and horinztally*/
-    position: absolute;
-    top: 50vh;
-    transform: translateY(-50%);
-    left:50vh;
-
-    padding-right: 20px;
-    border: 1px solid #888;
     width: 50%;
     height: auto;
-
-    display: flex;
-    flex-direction: row;
     transition: transform 0.5s;
+
+    position: absolute;
+    top: 50vh;
+    left: 50vh;
+    transform: translateY(-50%);
+
+    padding: 10px;
+    border: 1px solid #888;
+
+    background-color: #fefefe;
 }
 
-.divider-vertical
+#modal-image-container
 {
-    position: relative;
-    margin-left: 5px;
-    width: 5px;
-    height: 100%;
-    overflow: hidden;
-    background-color: #e5e5e5;
-}
-
-/* Details container */
-
-#modal-image-details-content #details-container
-{
-    display: flex;
-    flex-direction: column;
+    max-width: 500px;
     height: auto;
-    width: 100%;
-    margin-left: 25px;
-    margin-top: 15px;
-}
+    max-height: 500px;
 
-#modal-image-details-content #details-container p
-{
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 3px;
-}
-
-#add-cart-submit
-{
-    width: 30%;
-    height: 30px;
-    margin: auto;
-
-    margin-bottom: 6%;
-    padding: auto;
-    border: 1px solid #00c7fc;
-    border-radius: 3px;
-
-    cursor: pointer;
-    text-align: center;
-
-    font-size: 13px;
-    background-color: #FFFFFF;
-    color: #212529;
-}
-
-
-/* Description container */
-
-#modal-image-details-content #details-container #desc-container
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    left: 0;
+    margin: auto 20px auto 0;
 
 }
 
-#modal-image-details-content #details-container #desc-container #desc
+#modal-image-container img
 {
-    margin: auto;
+    max-width: 450px;
+    height: auto;
+    max-height: 450px;
 }
 
-
-
-
-/* Price container */
-#modal-image-details-content #details-container #price-container
+#price-container p
 {
-    display: flex;
-    flex-direction: row;
-    margin-top: 20px;
-
+    margin-right: 5px;
 }
 
-
-/*Image container */
-
-#modal-image-details-content #image-container
+#action-container
 {
-    left:0;
-    margin: 5px;
-    width: 500px;
+    position: fixed;
 
+    right: 20px;
+    bottom: 20px;
 }
 
-.modal img
+#action-container p
 {
-    width: 100%;
-}
-
-
-
-.images-container
-{
-    margin-bottom: 20px;
-    margin-top: 20px;
+    margin: 0;
 }
 
 /* footer */
@@ -292,7 +233,7 @@
 footer
 {
     position: fixed;
-    bottom: 0px;
+    bottom: 0;
 
     width: 100%;
 }
