--- a/Project/css/project-style.css
+++ b/Project/css/project-style.css
@@ -67,7 +67,7 @@ header h2
     width: 50%;
     height: 60%;
 
-    margin-top: 5%;
+    margin-top: 2.5%;
     margin-left: 25%;
     margin-bottom: 20px;
 
@@ -86,10 +86,8 @@ header h2
 {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-
-    height: 25px;
 
     margin-top: 20px;
 }
@@ -97,14 +95,11 @@ header h2
 #submit-upload
 {
     width: 15%;
-    height: 33px;
-
-    padding: auto;
+    height: 40px;
     border: 1px solid #00c7fc;
     border-radius: 3px;
 
     cursor: pointer;
-    text-align: center;
 
     font-size: 13px;
     background-color: #FFFFFF;
