--- a/Project/css/project-style.css
+++ b/Project/css/project-style.css
@@ -150,7 +150,7 @@ header h2
     border-color: #00c7fc;
 }
 
-#keywordList
+#keywords-list
 {
     width: 100%;
     max-height: 150px;
@@ -162,7 +162,7 @@ header h2
     list-style-type: none;
 }
 
-#keywordList li, #keywordList div a
+#keywords-list li, #keywords-list div a
 {
     display: flex;
     flex-direction: row;
@@ -180,18 +180,18 @@ header h2
 }
 
 
-#keywordList li:hover:not(.header)
+#keywords-list li:hover:not(.header)
 {
     background-color: #eee;
 }
 
-#keywordList div a
+#keywords-list div a
 {
     justify-content: center;
     color:#007bff;
 }
 
-#keywordList div a:hover
+#keywords-list div a:hover
 {
     text-decoration: underline;
     cursor:pointer;
