--- a/Project/css/project-style.css
+++ b/Project/css/project-style.css
@@ -232,14 +232,16 @@ header h2
 
 .modal-content
 {
-    width: 50%;
+    max-width: 75%;
+    min-width: 40%;
+    min-height: 40%;
+
     height: auto;
     transition: transform 0.5s;
 
     position: absolute;
-    top: 50vh;
-    left: 50vh;
-    transform: translateY(-50%);
+    top: 50%;  left: 50%;
+    transform: translate(-50%, -50%);
 
     padding: 10px;
     border: 1px solid #888;
@@ -283,9 +285,19 @@ header h2
     margin: 0;
 }
 
+#desc-container
+{
+    margin-right: 10px;
+}
+
 #desc-container p
 {
     margin-bottom: 10px;
+}
+
+#title-container h2
+{
+    word-wrap: break-word;
 }
 /*****************/
 /* Add tag modal */
